# roustabout

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.example.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  publish.yml  release.yml  scorecard.yml
config/: config.toml.example
cronbox/: Dockerfile  deploy.sh  docker-compose.yml  sshd_config
src/roustabout/: __init__.py  audit_renderer.py  auditor.py  bulk_ops.py  cli.py  collector.py  compose_gitops.py  config.py  connection.py  constants.py  container_exec.py  deep_health.py  diff.py  digest_tracker.py  dockstarter_env.py  dr_plan.py  env_splitter.py  exec.py  file_ops.py  gateway.py  generator.py  health_stats.py  json_output.py  lockdown.py  log_access.py  mcp_server.py  metrics.py  models.py  multi_host.py  mutations.py  net_check.py  network_inspect.py  notifications.py  permissions.py  redactor.py  renderer.py  secret_rotation.py  session.py  state.py  state_db.py  (+1 more)
src/roustabout/api/: __init__.py  app.py  auth.py  discovery.py  routes.py  schemas.py  server.py
src/roustabout/cli/: __init__.py  backend.py  direct.py  http.py  main.py
src/roustabout/integrations/: __init__.py  grafana.py  manager.py  traefik.py  uptime_kuma.py
src/roustabout/mcp_proxy/: __init__.py  server.py
tests/: conftest.py  test_api_auth.py  test_api_discovery.py  test_api_routes.py  test_auditor.py  test_bulk_ops.py  test_cli.py  test_cli_backend.py  test_collector.py  test_compose_gitops.py  test_config.py  test_connection.py  test_container_exec.py  test_deep_health.py  test_diff.py  test_digest_tracker.py  test_dockstarter_env.py  test_dr_plan.py  test_env_splitter.py  test_exec.py  test_file_ops.py  test_gateway.py  test_generator.py  test_health_stats.py  test_import_constraints.py  test_integration_remote.py  test_integrations.py  test_json_output.py  test_lockdown.py  test_log_access.py  test_mcp_proxy.py  test_mcp_server.py  test_metrics.py  test_models.py  test_multi_host.py  test_mutations.py  test_net_check.py  test_network_inspect.py  test_notifications.py  test_permissions.py  (+9 more)
tests/uat/: 034-supply-chain-uat.md
