[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roustabout"
version = "0.3.0"
description = "Docker environment documentation, security auditing, and safe MCP server"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Cron", email = "cron@featurecreep.dev" },
    { name = "Chris", email = "chris@featurecreep.dev" },
]
keywords = ["docker", "documentation", "compose", "markdown", "security", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "docker>=7.0",
    "click>=8.0",
    "ruamel.yaml>=0.18",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
roustabout = "roustabout.cli:main"
roustabout-mcp = "roustabout.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.black]
target-version = ["py310"]
line-length = 99

[tool.pytest.ini_options]
testpaths = ["tests"]
