[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roustabout"
version = "0.14.0"
description = "Docker environment documentation, security auditing, and safe MCP server"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Cron", email = "cron@featurecreep.dev" },
    { name = "Chris", email = "chris@featurecreep.dev" },
]
readme = "README.md"
keywords = ["docker", "documentation", "compose", "markdown", "security", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.0",
    "ruamel.yaml>=0.18",
    "secretscreen>=0.1.0",
    "httpx>=0.24",
    "structlog>=24.1",
]

[project.urls]
Homepage = "https://github.com/featurecreep-cron/roustabout"
Repository = "https://github.com/featurecreep-cron/roustabout"
Issues = "https://github.com/featurecreep-cron/roustabout/issues"

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.0",
]
server = [
    "docker>=7.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
roustabout = "roustabout.cli:main"
roustabout-mcp = "roustabout.mcp_proxy.server:main"
roustabout-server = "roustabout.api.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["docker.*", "ruamel.*", "mcp.*", "tomli", "fastapi.*", "uvicorn.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["roustabout.mcp_proxy.server"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
tag_format = "v{version}"
major_on_zero = false
allow_zero_version = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    "^chore:",
    "^ci:",
    "^docs:",
    "^style:",
]

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
upload_to_vcs_release = true
dist_glob_patterns = ["dist/*"]
